joke and jokelist add and delete

--- a/src/app/joke/joke.component.html
+++ b/src/app/joke/joke.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-<div class=" col">
+<div class=" col parent">
 <div class=" card">
 	<div *ngIf="joke.joke.hide" class="">
 	<p>{{joke.i +"-"+joke.joke.setup}}</p>
