--- a/src/app/joke/joke.component.html
+++ b/src/app/joke/joke.component.html
@@ -2,7 +2,7 @@
 <div class=" col parent">
 <div class=" card">
 	<div *ngIf="joke.joke.hide" class="">
-	<p>{{joke.i +"-"+joke.joke.setup}}</p>
+	<p class="text-muted">{{joke.i +"-"+joke.joke.setup}}</p>
 	<p>{{joke.joke.punchline}}</p>
 
 
