--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,3 +3,12 @@ h1 {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 250%;
 }
+
+h3.title-carousel-item {
+    position: absolute;
+    top: 70%;
+    left: 36%;
+    transform: translate(50% 50%);
+    color: #fff;
+    border-bottom: 2px solid;
+}
