--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
-<!--The content below is only a placeholder and can be replaced.-->
 
 
- <app-book-list></app-book-list>
+	
+
+<app-panel-list >
+			
+			
+</app-panel-list>
+
