--- a/src/app/joke/joke.component.html
+++ b/src/app/joke/joke.component.html
@@ -7,12 +7,13 @@
 
 
 </div>
+	<!-- add button click delete joke branch delete-joke -->
 	<button class="btn btn-danger"  (click)="deleteJoke(joke.i)"> Delete </button>
 	
 	<button class="btn btn-info" (click)="joke.joke.toggle()">{{joke.joke.hide?'Hide':'Show'}}</button>
-	  <button class="btn btn-success" (click)="select()">
+<!-- 	  <button class="btn btn-success" (click)="select()">
     {{ isSelected ? 'Selected' : 'Select'}}
-  </button>
+  </button> -->
 </div>
 
 </div>
