--- a/src/app/joke/joke.component.html
+++ b/src/app/joke/joke.component.html
@@ -7,7 +7,7 @@
 
 
 </div>
-	<!-- add button click delete joke branch delete-joke -->
+	<!-- add button click delete joke branch delete-joke update -->
 	<button class="btn btn-danger"  (click)="deleteJoke(joke.i)"> Delete </button>
 	
 	<button class="btn btn-info" (click)="joke.joke.toggle()">{{joke.joke.hide?'Hide':'Show'}}</button>
