--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -3,6 +3,7 @@
 <div class="row">
 <div class=" col-12 parent">
 <div class=" card">
+	<!-- Component Book book-add-list -->
 	<div *ngIf="book.book.hide" class="col-12">
 <div class="row">
 		<div class="col-4 card"> 
