--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,18 @@
-
+<!--carousel  -->
+<app-carousel>
+	<app-carousel-item>
+  <img src="assets/img/cover-forsan-technology.png"  class="img-fluid" alt="imag">
+  <h3>Angular Cli </h3>
+	</app-carousel-item>
+	<app-carousel-item>
+  <img src="assets/img/cover-forsan-technology.png"  class="img-fluid" alt="imag">
+  <h3> Typescript </h3>
+	</app-carousel-item>
+	<app-carousel-item>
+  <img src="assets/img/cover-forsan-technology.png"  class="img-fluid" alt="imag">
+  <h3> Javascript </h3>
+	</app-carousel-item>
+</app-carousel>
 
 	
 
