add carousel update delay input

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--carousel  -->
-<app-carousel>
+<app-carousel [delay]="2000">
 	<app-carousel-item>
   <img src="assets/img/cover-forsan-technology.png"  class="img-fluid" alt="imag">
   <h3>Angular Cli </h3>
@@ -15,11 +15,12 @@
 </app-carousel>
 
 	
-
-<app-panel-list >
-			
-			
-</app-panel-list>
 <!-- show book-list in app root -->
 <app-book-list></app-book-list> 
 
+<!-- Panel -->
+<!-- 
+<app-panel-list >
+			
+			
+</app-panel-list> -->
