add instance panel-list in app root

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,8 +19,9 @@
 <app-book-list></app-book-list> 
 
 <!-- Panel -->
-<!-- 
+
 <app-panel-list >
 			
 			
-</app-panel-list> -->
+</app-panel-list>
+<br>
