update accordion panel with used contentChildren af-st

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,47 @@
 <!--carousel  -->
-<app-carousel [delay]="2000">
+<!-- <app-carousel [delay]="2000" >
 	<app-carousel-item>
-  <img src="assets/img/cover-forsan-technology.png"  class="img-fluid" alt="imag">
+  <img src="https://cdn.scotch.io/37954/f4o1WmLtQweWCJZABtgO_Angular-JS.jpg"  class="img-fluid" alt="imag">
   <h3>Angular Cli </h3>
 	</app-carousel-item>
 	<app-carousel-item>
-  <img src="assets/img/cover-forsan-technology.png"  class="img-fluid" alt="imag">
+  <img src="http://naywinmyint.com/content/images/2016/04/TypeScript-and-classes-and-interfaces-naywinmyint-com.jpg"  class="img-fluid" alt="imag">
   <h3> Typescript </h3>
 	</app-carousel-item>
 	<app-carousel-item>
-  <img src="assets/img/cover-forsan-technology.png"  class="img-fluid" alt="imag">
+  <img src="https://cdn.colorlib.com/wp/wp-content/uploads/sites/2/Templating-Engines-for-JavaScript.png"  class="img-fluid" alt="imag">
   <h3> Javascript </h3>
 	</app-carousel-item>
-</app-carousel>
+</app-carousel> -->
 
 	
 <!-- show book-list in app root -->
-<app-book-list></app-book-list> 
+<!-- <app-book-list></app-book-list>  -->
 
 <!-- Panel -->
-
+	
+<app-panel>
 <app-panel-list >
-			
-			
+<h3> Titl1</h3>
+<p>
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem iure, facere molestias eum iste ipsa eius? Assumenda perferendis ipsa nemo cumque, dolorum nihil reiciendis, sit labore voluptatum recusandae, dolore veritatis!
+</p>
 </app-panel-list>
+<app-panel-list>
+<h3> Titl2</h3>
+<p>
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem iure, facere molestias eum iste ipsa eius? Assumenda perferendis ipsa nemo cumque, dolorum nihil reiciendis, sit labore voluptatum recusandae, dolore veritatis!
+</p>
+</app-panel-list>
+
+<app-panel-list>
+<h3> Titl3</h3>
+<p>
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem iure, facere molestias eum iste ipsa eius? Assumenda perferendis ipsa nemo cumque, dolorum nihil reiciendis, sit labore voluptatum recusandae, dolore veritatis!.
+	{{1+1}}
+
+</p>
+</app-panel-list>				
+			
+</app-panel>
 <br>
