--- a/src/app/panel-list/panel-list.component.html
+++ b/src/app/panel-list/panel-list.component.html
@@ -1,4 +1,10 @@
+<div class="panel-list card-header" Forsan (click)="toggle.emit()" >
+<ng-content select="h3"></ng-content>
 
-<app-panel *ngFor="let panel of panelList let i=index" [panel]={panel:panel,i:i}
-></app-panel>
+</div>
+<div class="panel-list card-body"  *ngIf="isOpen">
 
+<ng-content select="p"></ng-content>
+
+
+</div>
