--- a/src/app/panel/panel.component.html
+++ b/src/app/panel/panel.component.html
@@ -1,13 +1,8 @@
 
 
 <div class="container">
-<div class="panel-list card-header" (click)="vissable = !vissable" >
-{{panel.panel.titlePanel}}
-	
-</div>
-<div class="panel-list card-body" *ngIf="vissable">
-{{panel.panel.contentPanel}}
 
-</div>
+<ng-content></ng-content>
+
 
 </div>
