--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,14 +14,31 @@
 	</app-carousel-item>
 </app-carousel>
 
+
 	
 <!-- show book-list in app root -->
 <app-book-list></app-book-list> 
 
 <!-- Panel -->
+<app-panel>
+	<app-panel-list>
+	<h3> Title 1 </h3>
+	<p>
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe aut vitae reiciendis, officiis recusandae accusamus doloremque in, fugit sed ipsum perferendis ducimus, illo nihil doloribus, soluta vero facilis necessitatibus quibusdam?
+	</p>
+	</app-panel-list>
+	<app-panel-list>
+	<h3> Title 1 </h3>
+	<p>
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe aut vitae reiciendis, officiis recusandae accusamus doloremque in, fugit sed ipsum perferendis ducimus, illo nihil doloribus, soluta vero facilis necessitatibus quibusdam?
+	</p>
+	</app-panel-list>
+	<app-panel-list>
+	<h3> Title 1 </h3>
+	<p>
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe aut vitae reiciendis, officiis recusandae accusamus doloremque in, fugit sed ipsum perferendis ducimus, illo nihil doloribus, soluta vero facilis necessitatibus quibusdam?
+	</p>
+	</app-panel-list>
+</app-panel>
 
-<app-panel-list >
-			
-			
-</app-panel-list>
 <br>
