--- a/src/app/panel/panel.component.css
+++ b/src/app/panel/panel.component.css
@@ -4,6 +4,6 @@ div.card-body,
 	/*border-right: 1px solid #ccc;*/
 }
 
-div.card-body{
+/*div.card-body{
 	background-color: rgba(0, 0, 0, 0.09);
-}
+}*/
