--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,9 +20,13 @@
 <!-- <app-book-list></app-book-list>  -->
 
 <!-- Search -->
-<app-search></app-search>
+<!-- <app-search></app-search> -->
+<!-- <app-modal></app-modal> -->
+<app-demo></app-demo>
+<!-- <app-ngform></app-ngform> -->
+<!-- <app-joke-list></app-joke-list> -->
 <!-- Panel -->
-<app-panel>
+<!-- <app-panel>
 	<app-panel-list>
 	<h3> Title 1 </h3>
 	<p>
@@ -41,6 +45,7 @@
 	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe aut vitae reiciendis, officiis recusandae accusamus doloremque in, fugit sed ipsum perferendis ducimus, illo nihil doloribus, soluta vero facilis necessitatibus quibusdam?
 	</p>
 	</app-panel-list>
-</app-panel>
+</app-panel> -->
+
 
 <br>
