--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -2,4 +2,16 @@
  <div class="form-group">
  	<input type="text" class="form-control" placeholder="Search..." autofocus>
  </div>
+ <br>
+
+ <div>
+ 	
+ </div>
+ <div class="lead">
+ 	{{counter|json}}
+ </div>
+
 </div>
+
+
+
