--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -3,10 +3,10 @@
 	<div class="row">
 	<!-- The Modal -->
 
-	<div [@ngModal] id="myModal" class="modal" *ngIf="visible"  >
+	<div [@ngModal] id="myModal" class="modal" *ngIf="visible" appNgmodal >
 
 	<!-- Modal content -->
-	<div class="modal-content col-md-6 offset-md-3" appNgmodal (mouseleave)="close()" >
+	<div class="modal-content col-md-6 offset-md-3"  (mouseleave)="close()" >
 	<header class="modal-header col-md-12  alert alert-info">
 	<ng-content select="h3"></ng-content>
 	<span class="close float-left col-1"  (click)="close()" >&times;</span>
