--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,8 +22,8 @@
 <!-- Search -->
 <!-- <app-search></app-search> -->
 <!-- <app-modal></app-modal> -->
-<app-demo></app-demo>
-<!-- <app-ngform></app-ngform> -->
+<!-- <app-demo></app-demo> -->
+<app-ngform></app-ngform>
 <!-- <app-joke-list></app-joke-list> -->
 <!-- Panel -->
 <!-- <app-panel>
