model-form & validate

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,8 +23,11 @@
 <!-- <app-search></app-search> -->
 <!-- <app-modal></app-modal> -->
 <!-- <app-demo></app-demo> -->
-<app-ngform></app-ngform>
-<!-- <app-joke-list></app-joke-list> -->
+<!-- <app-ngform></app-ngform> -->
+<!-- <app-ngform-model-functionlty></app-ngform-model-functionlty> -->
+<!-- <app-template-driven-form></app-template-driven-form> -->
+<!-- <app-form></app-form> -->
+<app-joke-list></app-joke-list>
 <!-- Panel -->
 <!-- <app-panel>
 	<app-panel-list>
